Fixed bug #38772 (inconsistent overriding of methods in different visibility contexts)